--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.0",
     "@privy-io/react-auth": "^2.14.0",
+    "@privy-io/server-auth": "^1.27.3",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
